--- a/changelog/breaking-changes-upgrades/upgrade-guides.mdx
+++ b/changelog/breaking-changes-upgrades/upgrade-guides.mdx
@@ -1,156 +1,197 @@
 ---
 title: "Upgrade Guides"
-description: "Step-by-step instructions and best practices for upgrading between major releases, with actionable tips for adapting code and configurations. This resource streamlines migration and reduces risk for teams updating their test infrastructure."
+description: "Scenario-based guides for upgrading from one major version to the next. Covers code examples, environment prerequisites (like C++17 changes), and troubleshooting tips to ensure a seamless upgrade experience."
 ---
 
 # Upgrade Guides
 
-GoogleTest evolves to keep your testing infrastructure robust, modern, and efficient. This page delivers clear, step-by-step guidance for upgrading between major GoogleTest releases. By focusing on user outcomes, this resource ensures your migration is smooth, minimizes disruption, and helps you leverage new features securely and confidently.
+Scenario-based guides for upgrading from one major version of GoogleTest to the next. These guides are designed to walk you through the key steps, code changes, environment requirements, and troubleshooting strategies you need to ensure a smooth transition and preserve test reliability.
 
 ---
 
-## Why Upgrade?
+## 1. Why Upgrade? Understanding the Value
 
-Upgrading between major releases is essential to maintain compatibility with evolving C++ standards (e.g., C++17 requirement from v1.17.x), benefit from bug fixes, security enhancements, and to access new test features like advanced parameterized tests and improved mocking capabilities.
+Upgrading GoogleTest between major versions is essential to benefit from improved test framework capabilities, increased compatibility with modern C++ standards, and resolved issues that impact your testing workflow. These guides help you manage the upgrade process with confidence, minimizing downtime and exposure to breaking changes.
 
-However, major updates may introduce changes that require adapting your existing test code and configurations. This guide addresses those challenges with practical advice and actionable tips.
+Key reasons to upgrade include:
 
----
-
-## Upgrade Workflow
-
-GoogleTest Upgrade Guides are designed as a progressive journey from preparation to post-upgrade validation:
-
-### 1. Review Release Notes
-
-Before upgrading, carefully review the detailed release notes for the target version. Key information to check includes:
-
-- New features that can enhance your testing lifecycle
-- Deprecated or removed functionalities
-- Known breaking changes requiring manual intervention
-
-This step helps anticipate impact and plan necessary code or environment changes.
-
-### 2. Prepare Your Environment
-
-Ensure your build environment supports the minimum requirements:
-
-- Confirm your compiler supports C++17 or later (required from v1.17.x onwards)
-- Update your build tools if necessary (e.g., CMake 3.14+ for certain integration methods)
-- Backup existing test projects and configurations to avoid data loss
-
-### 3. Update Dependencies
-
-If you use GoogleTest as part of your build system, update your dependencies accordingly:
-
-- For CMake projects, update the version tag in your `FetchContent_Declare` or submodule to the new release.
-- For manual builds, download and build the new version following updated instructions.
-
-Refer to the [Installation & Setup](getting-started/installation-setup/installation-methods.md) page for details.
-
-### 4. Adapt Test Code and Configurations
-
-Check your existing test code for patterns or constructs that may have changed:
-
-- Verify that `TEST`, `TEST_F`, `TEST_P`, and typed tests conform to the updated syntax and semantics.
-- Review any use of `INSTANTIATE_TEST_SUITE_P` for parameterized tests and update as needed.
-- Update deprecated macros or APIs according to the changelog.
-- Modify fixture setup/teardown if lifecycle management has nuanced changes.
-
-### 5. Rebuild and Run Tests
-
-Compile your test suite against the new GoogleTest version.
-
-- Pay attention to compiler warnings or errors indicating deprecated code or API mismatches.
-- Run your test suite and monitor for unexpected failures.
-- Use `--gtest_list_tests` to verify test discovery remains intact.
-
-### 6. Validate Test Results and Reporting
-
-- Compare XML or JSON test reports for consistency.
-- Confirm that unexpected changes in test outcomes are investigated.
-- Check new logging or event listener features if integrated.
-
-### 7. Optimize and Leverage New Features
-
-- Explore new assertion types, test macros, or mocking behaviors introduced.
-- Consider refactoring tests to benefit from performance or clarity enhancements.
+- **Access to new features** such as enhanced test macros, improved mocking support, and extended assertions.
+- **Compliance with required environment** updates like mandating C++17 standard support.
+- **Adaptation to breaking changes** like API adjustments or test registration improvements that ensure your tests run reliably.
 
 ---
 
-## Best Practices & Tips
+## 2. Preparing Your Environment
 
-- **Incremental Upgrades:** Upgrade major versions one step at a time rather than skipping versions to catch and fix compatibility issues easier.
-- **Use CI Pipelines:** Automate tests with Continuous Integration to promptly capture regression issues caused by the upgrade.
-- **Keep Dependencies Synchronized:** When using GoogleMock together with GoogleTest, upgrade both simultaneously to avoid mismatches.
-- **Consult Official Documentation:** Leverage the GoogleTest [Testing Reference](docs/reference/testing.md), [Assertions Reference](api-reference/core-testing-apis/assertions.md), and [Parameterized Tests](api-reference/core-testing-apis/parameterized-typed-tests.md) to adjust your tests correctly.
-- **Handle Deprecated APIs:** Search your code for deprecated macros or APIs called out in release notes and refactor to their supported replacements promptly.
-- **Share Knowledge:** Coordinate team members through documentation and code reviews during the upgrade to ensure uniform adoption.
+Before beginning the upgrade:
 
----
+- **Verify compiler support for C++17 or later**, as recent GoogleTest versions mandate this standard. Most modern compilers support it, but ensure your build environment includes:
+  - GCC 7.1 or later
+  - Clang 6.0 or later
+  - MSVC 2017 Update 3 or later
 
-## Common Migration Scenarios
+- **Update your build tooling** to match recommendations:
+  - Use CMake 3.14+ to enable seamless integration with GoogleTest's `FetchContent` capabilities.
+  - Confirm your build system accepts `-std=c++17` or equivalent flags.
 
-### Adapting to the C++17 Requirement
-
-From v1.17.x onwards, GoogleTest requires C++17 support:
-
-- Update your compiler toolchain (GCC 7+, Clang 5+, MSVC 2017+).
-- Update your project's build settings (e.g., `-std=c++17` in CMake).
-- Verify that third-party dependencies linked with tests also support C++17.
-
-### Updating Parameterized and Typed Tests
-
-- Review that your use of `INSTANTIATE_TEST_SUITE_P` matches the new recommended API, especially the naming conventions and parameter generator usage.
-- Check that your `TEST_P`, `TYPED_TEST`, and `TYPED_TEST_P` macros follow the current syntax rules.
-
-### Handling Deprecated Test Macros
-
-- Replace any legacy macros or aliases deprecated in the new release.
-- For example, ensure `TEST_CASE` is replaced by `TEST_SUITE` as per GoogleTest terminology transitions.
-
-### Modifying Test Environment and Shared Fixtures
-
-- Adjust usage of `SetUpTestSuite()` and `TearDownTestSuite()` methods if lifecycle behaviors changed.
-- Confirm correct use of `Environment` objects registered globally using `AddGlobalTestEnvironment()`.
+- **Check third-party dependencies or custom build setups** for any compatibility hurdles.
 
 ---
 
-## Troubleshooting
+## 3. Key Upgrade Steps and Code Examples
 
-### Tests Not Discovered After Upgrade
+This section walks through common upgrade scenarios, illustrating necessary code modifications and build configurations.
 
-- Confirm test macros are not disabled or incorrectly spelled.
-- Use `--gtest_list_tests` to verify detection.
-- Check that your namespace and test suite names follow recommended conventions with no underscores.
+### 3.1 Transitioning to C++17
 
-### Unexpected Test Failures
+Ensure you specify the C++ standard explicitly in your CMake or build setup. For CMake projects:
 
-- Review assertion messages for deprecated usage or changed semantics.
-- Check if test dependencies or mocks have been affected by API changes.
-- Use scoped trace features (`SCOPED_TRACE`) to isolate failure points.
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
 
-### Build Issues
+If this is not possible in your project (e.g., legacy C code base), add the standard via compiler flags:
 
-- Verify compiler version compatibility.
-- Confirm C++ standard flags are set consistently.
-- Resolve any macro clashes flagged by the compiler (check flag overrides like `-DGTEST_DONT_DEFINE_<MACRO>`).
+```bash
+-DCMAKE_CXX_FLAGS='-std=c++17'
+```
+
+This change is non-negotiable as GoogleTest 1.17.x and later depend on C++17 language features for core functionality.
+
+### 3.2 Using GoogleTest as a Subdirectory with FetchContent
+
+GoogleTest now supports fetching its source as part of your build seamlessly.
+
+In your `CMakeLists.txt`, add:
+
+```cmake
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)  # For Windows dynamic runtime compatibility
+FetchContent_MakeAvailable(googletest)
+
+add_executable(your_test_exe test.cpp)
+target_link_libraries(your_test_exe gtest_main)
+add_test(NAME your_test COMMAND your_test_exe)
+```
+
+This updates your build to use the latest recommended method without the need to manually clone or embed GoogleTest.
+
+### 3.3 Migrating from Legacy Mock Macro to `MOCK_METHOD`
+
+Prior major releases replaced all older mocking macros with the unified `MOCK_METHOD` macro. Ensure your mocks are updated accordingly.
+
+Example before upgrade:
+
+```cpp
+MOCK_METHOD0(Foo, void());
+```
+
+Example after upgrade:
+
+```cpp
+MOCK_METHOD(void, Foo, (), ());
+```
+
+Failure to update may result in deprecation warnings or compilation errors.
+
+### 3.4 Handling Runtime Library Mismatch on Windows
+
+If you encounter linker errors related to conflicting runtimes (e.g., `MTd_StaticDebug` vs `MDd_DynamicDebug`), add the following line to your CMake configuration:
+
+```cmake
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+```
+
+This forces GoogleTest to link against the dynamic runtime libraries, aligning with your application's settings.
 
 ---
 
-## Additional Resources
+## 4. Troubleshooting Common Issues
 
-- [GoogleTest Primer](docs/primer.md) - Essentials to writing and running your first tests.
-- [Testing Reference](docs/reference/testing.md) - Comprehensive macro and fixture definitions.
-- [Parameterized & Typed Tests](api-reference/core-testing-apis/parameterized-typed-tests.md) - Expanded use of test data structures.
-- [Assertions Reference](api-reference/core-testing-apis/assertions.md) - All assertion styles and best practices.
-- [Mocking Integration](faq/getting_started_faq/gmock_integration.md) - Using GoogleMock with GoogleTest.
-- [Changelog and Release Notes](changelog/version-history/all-releases.md) - Detailed release-specific upgrade information.
+### 4.1 Build Failures Due to Missing C++17 Support
 
-<Check>
-When upgrading, always ensure backups and CI pipelines are in place to rapidly detect issues.
-</Check>
+Symptoms:
+- Compiler errors about unavailable features or syntax errors.
+
+Resolution:
+- Confirm compiler version and flags.
+- Explicitly set standard in CMake.
+
+### 4.2 Test Failures After Upgrade Related to Mock Behavior
+
+Symptoms:
+- Unexpected failures or no longer honored expectations in mocks.
+
+Resolution:
+- Verify updated use of `MOCK_METHOD` macros.
+- Check strictness mode changes—adjust mocks to handle uninteresting calls explicitly.
+- Enable verbose mock output during troubleshooting.
+
+### 4.3 Runtime Errors on Windows Related to DLL and Runtime Library Linking
+
+Symptoms:
+- Linker errors regarding runtime library mismatch.
+
+Resolution:
+- Use `gtest_force_shared_crt` CMake option.
+- Align your project's runtime library settings with GoogleTest.
 
 ---
 
-Maintaining your test infrastructure with up-to-date GoogleTest releases preserves your project's reliability and future-proofs your test codebase. Follow these guides closely, and your migration will be seamless and rewarding.
+## 5. Best Practices for Smooth Upgrades
+
+- **Start by updating your build environment** to meet prerequisites before changing test code.
+- **Test your entire test suite after upgrade in an isolated environment** to catch regressions early.
+- **Use Google's recommended CMake FetchContent method** to incorporate GoogleTest, ensuring you always get compatible versions.
+- **Incrementally migrate deprecated syntax** with automated tooling or scripts where applicable.
+- **Monitor and update mocking strategies** especially related to expectations and call orders.
+- **Consult official upgrade notes for any breaking changes** that may affect your use case.
+
+---
+
+## 6. Further Assistance and Resources
+
+- Review the comprehensive [Breaking Changes & Migrations](https://github.com/google/googletest/blob/main/docs/changelog/breaking-changes.md) for detailed notes on major transitions.
+- Consult the [Version Timeline & Release Notes](https://github.com/google/googletest/releases) to track feature introductions and bug fixes.
+- Use the [GoogleTest Primer](https://google.github.io/googletest/primer.html) to familiarize yourself with modern best practices.
+- For build system related queries, refer to the [Build System Integration Guide](../../guides/integration_and_effectiveness/build_system_integration.md).
+
+---
+
+## Appendix: Example Upgrade Workflow
+
+<Steps>
+<Step title="Backup Your Current Tests">
+Ensure your test code and build system configurations are safely backed up or committed to version control.
+</Step>
+<Step title="Update Build Environment">
+Upgrade your compiler and build tools to versions supporting C++17, update CMake to 3.14 or later.
+</Step>
+<Step title="Adjust Build Scripts">
+Incorporate CMake FetchContent for GoogleTest or upgrade your existing GoogleTest source integration.
+</Step>
+<Step title="Refactor Mock Macros">
+Change all legacy mock macros to the new `MOCK_METHOD` format as needed.
+</Step>
+<Step title="Compile and Run Tests">
+Rebuild your tests and run them fully to identify any failures arising due to the upgrade.
+</Step>
+<Step title="Fix Identified Issues">
+Use logs and verbose output to fix mock strictness issues or runtime configuration mismatches.
+</Step>
+<Step title="Confirm and Document">
+Verify all tests pass, then document the upgrade and update your project's dependencies.
+</Step>
+</Steps>
+
+---
+
+These Upgrade Guides serve as your trusted companion to navigate the transition between major GoogleTest versions with clarity and confidence. Align your projects with the best-supported environments and practices to leverage the full power of GoogleTest's latest advancements.
+
+
+[GoogleTest Primer](https://google.github.io/googletest/primer.html) | [Breaking Changes & Migrations](https://github.com/google/googletest/blob/main/docs/changelog/breaking-changes.md) | [Build System Integration Guide](../../guides/integration_and_effectiveness/build_system_integration.md) | [Version Timeline & Release Notes](https://github.com/google/googletest/releases)
