--- a/overview/architecture-and-core-concepts/core-concepts-and-terminology.mdx
+++ b/overview/architecture-and-core-concepts/core-concepts-and-terminology.mdx
@@ -1,163 +1,130 @@
 ---
-title: "Core Concepts and Terminology"
-description: "Defines foundational terminology (tests, assertions, mocks, expectations, actions, matchers, strictness levels) that users will encounter. Clarifies their meaning, using concise examples and mapping concepts to relevant components for context."
+title: "Core Concepts & Terminology"
+description: "Master the essential terms—test cases, fixtures, assertions, matchers, death tests, mocks, expectations, cardinalities, and more. Build a foundational vocabulary that unlocks more advanced features and streamlines onboarding."
 ---
 
-# Core Concepts and Terminology
+# Core Concepts & Terminology
 
-Welcome to the foundational guide that introduces critical terminology and concepts you will encounter while using GoogleMock. This page is designed to clarify key terms such as **tests**, **assertions**, **mocks**, **expectations**, **actions**, **matchers**, and **strictness levels**, helping you build a strong conceptual framework before diving into detailed usage.
+## Building Your GoogleTest Vocabulary
 
----
+Understanding GoogleTest starts with mastering its essential terms and concepts. This foundational vocabulary will empower you to navigate advanced features confidently and accelerate your onboarding process.
 
-## Understanding the Basics: What You Really Need to Know
+### Why This Matters
 
-GoogleMock provides a powerful toolkit for writing and verifying mock objects in C++. To make the most of it, you should clearly understand the following core concepts:
-
-- **Tests:** The overall units of verification where expectations and mock interactions are verified.
-- **Assertions:** Statements in tests that verify conditions and outcomes.
-- **Mocks:** Substitute objects that mimic the behavior of real objects for controlled testing.
-- **Expectations:** Declarations of how mock methods are supposed to be called (arguments, times, order).
-- **Actions:** Define the behavior a mock method should perform when called.
-- **Matchers:** Conditions specifying what arguments to expect for mock method calls.
-- **Strictness Levels:** Controls that determine how the mock handles unexpected or uninteresting method calls.
-
-Understanding these concepts will help you write precise tests that are clear, maintainable, and robust.
+As you engage with GoogleTest, you’ll frequently encounter terms like **test cases**, **fixtures**, **assertions**, **matchers**, **death tests**, **mocks**, **expectations**, and **cardinalities**. Grasping these concepts isn’t just about memorizing definitions — it's about seeing how they fit together to create a flexible, expressive testing framework that helps you write reliable, maintainable C++ tests.
 
 ---
 
-## Key Terminology Explained with Relatable Examples
+## Key Terms Explained
 
-### Tests
-A **test** is a self-contained unit of verification. It can be a single function in your test suite that exercises a part of your code, asserting the expected behavior.
+### Test Cases (Test Suites)
+
+A **test case** — now more commonly called a **test suite** — is a collection of related tests grouped together logically. Think of it as a container that organizes tests by feature, class, or module.
+
+- Use test suites to structure your tests coherently.
+- Each test within a suite is executed independently to maintain test isolation.
+
+### Fixtures
+
+Fixtures are the shared environment or context in which multiple tests run. Implemented as classes derived from `testing::Test`, fixtures set up common data, objects, or state for each test.
+
+- Fixtures promote code reuse and reduce duplication.
+- Each test gets a fresh fixture object, ensuring isolation.
+- Use `TEST_F` macros to write tests that depend on fixtures.
+
+*Example*: If you have a database connection or complex object graph needed for many tests, define it once in a fixture’s setup rather than in each test.
 
 ### Assertions
-An **assertion** checks if a particular condition holds true during the test. For example, asserting that a function returns the correct value.
 
-### Mocks
-A **mock** mimics a real object’s interface but gives you full control and observation over its interactions. GoogleMock helps you create these mock classes effortlessly using macros like `MOCK_METHOD`.
+Assertions are the checks you make inside tests to verify conditions. GoogleTest provides macros that evaluate expressions and report success or failure:
 
-### Expectations
-An **expectation** states how you expect your mock's methods to be called—what arguments they should receive, how many times, and in what order. For example:
+- **Nonfatal Failures** (`EXPECT_*`): Report a failure but continue executing the current test.
+- **Fatal Failures** (`ASSERT_*`): Abort the current test immediately upon failure.
 
-```cpp
-EXPECT_CALL(mock_object, MethodName(arg_matchers))
-    .Times(ExactNumber)
-    .WillOnce(Return(value));
-```
+With these, you can verify equalities, inequalities, Boolean conditions, exceptions, floating-point approximations, and more.
 
-### Actions
-An **action** tells the mock what to do when a method is called. This could be returning a value, invoking a callback, or even deleting the mock itself.
+*Example*: `EXPECT_EQ(result, expected_value)` verifies that `result` equals `expected_value`.
 
 ### Matchers
-**Matchers** are predicates that specify how method arguments are validated. They can range from simple equality to complex custom conditions. The wildcard matcher `_` matches any argument value.
 
-For example:
+Matchers enable expressive and readable assertions by describing conditions in English-like statements. Used primarily with `EXPECT_THAT()` and `ASSERT_THAT()`, matchers boost test clarity and diagnostic messaging.
 
-```cpp
-EXPECT_CALL(mock, Foo(Ge(10), _));  // First argument >= 10, second anything
-```
+They allow:
 
-### Strictness Levels
-GoogleMock defines three primary mock strictness levels:
+- Pattern matching (e.g., `StartsWith`, `MatchesRegex`)
+- Compositions like `AllOf`, `AnyOf`
 
-| Strictness   | Behavior on Unexpected Calls                                  |
-|--------------|--------------------------------------------------------------|
-| NaggyMock    | Prints warnings for uninteresting calls (default behavior).  |
-| NiceMock     | Ignores uninteresting calls silently (suppresses warnings).  |
-| StrictMock   | Treats uninteresting calls as failures (errors).             |
+You can combine them to build complex assertions while preserving readable failure outputs.
 
-You can use `NiceMock<T>`, `NaggyMock<T>`, or `StrictMock<T>` to wrap your mock classes accordingly.
+### Death Tests
 
----
+Death tests validate that certain code paths cause program termination, such as due to failed assertions or critical errors.
 
-## Practical Examples: Mapping Concepts to Code
+- Use macros like `EXPECT_DEATH()` and `ASSERT_DEATH()`.
+- Death tests run in isolated subprocesses to safely detect termination without crashing the test runner.
+- Useful for verifying your program’s defensive checks.
 
-### Defining a Mock Method
+### Mocks and Expectations
 
-To create a mock method, use the `MOCK_METHOD` macro inside your mock class:
+Mocks help simulate components your code interacts with, enabling isolated and controlled testing.
 
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(void, DoThis, (), ());  // Mocks void DoThis()
-};
-```
+- GoogleMock integrates with GoogleTest for mock object creation.
+- **Expectations** define how mock methods should be called, their frequency, and return values.
+- Monitor interactions with mocks to ensure correct collaboration between system parts.
 
-### Setting an Expectation with a Matcher and Action
+### Cardinalities
 
-```cpp
-using ::testing::_;
-using ::testing::Return;
+Cardinalities specify the allowed number of times a mock method can be called.
 
-MockFoo mock;
-EXPECT_CALL(mock, DoThis())
-    .Times(1)
-    .WillOnce(Return());
-
-mock.DoThis();  // Matches expectation: test passes
-```
-
-### Controlling Strictness
-
-```cpp
-using ::testing::NiceMock;
-
-NiceMock<MockFoo> nice_mock;
-// Uninteresting calls to nice_mock will not produce warnings.
-```
-
-### What Happens on Unexpected Calls?
-
-- If a call does not match any `EXPECT_CALL`, it is an **unexpected call** — always an error.
-- If a call is made to a mock method without an `EXPECT_CALL`, it is an **uninteresting call**:
-  - `NaggyMock`: Prints a warning.
-  - `NiceMock`: Silently ignores.
-  - `StrictMock`: Causes a test failure.
+- Use to enforce that methods are called exactly once, at least once, or never.
+- Helps avoid over- or under-use of dependencies.
 
 ---
 
-## How This Page Fits into the Documentation
+## How These Concepts Work Together
 
-This page builds a universal understanding of the foundational terminology used within GoogleMock and testing with GoogleTest.
+Imagine you’re developing a feature `Foo`:
 
-For deeper technical details, refer to:
+1. **Group** all related tests in a test suite named `FooTest`.
+2. **Define a fixture** `FooTest` that sets up the necessary context.
+3. Within tests defined by `TEST_F(FooTest, TestName)`, harness **assertions** like `EXPECT_EQ` or `EXPECT_THAT` to verify behavior.
+4. To validate that a function correctly handles fatal errors, add **death tests**.
+5. When your code interacts with external components, replace them with **mocks** and specify **expectations** including permissible **cardinalities**.
 
-- [Mocking Reference](/docs/reference/mocking.md): In-depth explanation of macros, classes, and their usage.
-- [gMock Cookbook](/docs/gmock_cook_book.md): Practical recipes for real-world mocking usage.
-- [gMock for Dummies](/docs/gmock_for_dummies.md): Beginner-friendly introduction to mocking.
-
-Subsequent pages in the documentation sequence will build on these terms to show how to create, configure, and run mock-based tests efficiently.
-
----
-
-## Tips and Best Practices
-
-- Prefer using **NiceMock** by default to reduce warning clutter during refactoring and routine tests.
-- Use **StrictMock** for critical tests where unexpected calls must be detected immediately.
-- Write **expectations only for interactions you care about**; rely on `ON_CALL` or `NiceMock` default behavior for other methods.
-- Define **custom matchers** when argument checking logic is complex or reusable.
-- Use **sequences** and **expectation order controls** (`InSequence`, `After`) to validate call order when necessary.
+Mastering this terminology enables you to leverage GoogleTest’s full power, crafting focused, maintainable, and descriptive tests.
 
 ---
 
-## Troubleshooting Common Issues
+## Practical Tips and Common Pitfalls
 
-- If you see uninteresting call warnings for methods you want to ignore, consider wrapping the mock with `NiceMock` or adding a catch-all expectation.
-- If unexpected calls occur, verify your test’s expectations carefully and use verbose mode (`--gmock_verbose=info`) to trace mock call matching.
-- When mocking classes not owned by you, prefer creating a thin interface and mock that instead.
-- Ensure destructors are virtual in interfaces you mock to avoid runtime issues.
-
----
-
-For a more visual understanding, consult the [System Architecture Overview](overview/architecture-and-core-concepts/system-architecture) page, which positions these concepts within the larger GoogleMock framework.
-
-
-### References
-- [Mocking Reference](docs/reference/mocking.md)
-- [gMock Cookbook](docs/gmock_cook_book.md)
-- [gMock for Dummies](docs/gmock_for_dummies.md)
-- [Mock Strictness Controls](/api-reference/mocking-api/strictness-controls)
+- Prefer non-fatal assertions (`EXPECT_*`) when you want a test to continue checking multiple conditions after one failure.
+- Use fatal assertions (`ASSERT_*`) when further execution would be meaningless or cause crashes.
+- Always provide meaningful failure messages by streaming additional context to assertions using `<<`.
+- Isolation is key: GoogleTest runs a fresh fixture for each test to avoid side effects leaking between tests.
+- For death tests, be mindful that state changes within the death-test subprocess do not affect the parent process.
+- Avoid underscores (`_`) in test suite or test names to prevent naming conflicts and obscure compiler errors.
 
 ---
 
-Feel free to explore the next pages under **Architecture & Core Concepts** to see how these terms apply and are implemented in the system.
+## Next Steps: Expanding Your Knowledge
+
+This foundational vocabulary prepares you to navigate GoogleTest confidently. To deepen your skills, explore:
+
+- The [Assertions Reference](reference/assertions.md) for comprehensive macro details.
+- The [Advanced GoogleTest Topics](advanced.md) to master fixtures, parameterized tests, and custom matchers.
+- The [Testing Reference](reference/testing.md) for macro usage and test structuring techniques.
+
+Understanding and using these terms will accelerate your testing workflow and improve code quality across your C++ projects.
+
+---
+
+## Helpful Links
+
+- [GoogleTest Primer](primer.md) — Start here to learn basic testing principles.
+- [Assertions Reference](reference/assertions.md) — Full list of assertions and their usage.
+- [Advanced Topics](advanced.md) — For in-depth test patterns and techniques.
+- [Writing and Running Tests Guide](guides/writing-and-running-tests/getting-started) — Practical walkthroughs for creating tests.
+
+---
+
+Embrace these core concepts and become productive with GoogleTest, turning your C++ testing into a swift, organized, and insightful process.
